# config

./: .gitignore  Brewfile  README.md  conf.nix  configuration.nix  default.nix  feeds.json  flake.nix  gg.ts  hardware-configuration.nix  herd.ts  home-row.ahk  home-row.xkb  host.nix  init.el  init.ps1  kanata.kbd  kanata.plist  kanata.rb  kde-of-macos.dj  kitty.conf  links.adoc  make.ts  microcuts.adoc  not-bash.py  plasma-global-shortcuts.kksrc  shell.nix  shortcuts.kksrc  tonotdo.adoc  xbindkeysrc  zenburn  zig.tar.xz
autostart/: init-x.desktop
dots/: .xbindkeysrc  .zpreztorc  .zshrc  home-row.xkb  ideavimrc  init.el  profile  ra-emacs-lsp.el  spacemacs  user-dirs.dirs  xbindkeysrc  xprofile  zpreztorc  zshrc
fish/: set_universals.fish
gg/: Cargo.toml  default.nix
home/: .gitconfig  .xbindkeysrc  sync.jl  sync.py
hosts/: Ishmael.nix  Moby.nix  default.nix  kanata.kbd  llm-claude-3.nix  nixos.nix  packages.nix
kanata/: kanata.kbd  org.custom.kanata.plist  org.custom.karabiner.plist
kitty/: close_other_windows.py  kitty.conf
my-code/: package-lock.json  package.json  tsconfig.json
nix/: configuration.nix  jbsdk.nix
overlays/: idea.nix
script/: Cargo.toml
scripts/: e.fish  e.sh  env.sh  init-user-shell.sh  init-x.sh  launch-emacs.sh  win-or-app.sh
templates/crate/: Cargo.toml
templates/crate/.github/: ci.rs
templates/crate/.github/workflows/: ci.yaml
templates/crate/xtask/: Cargo.toml
templates/crate/xtask/src/: main.rs
tool/: Cargo.toml
tools/: remote-run.sh  remote-sync.sh
user/: custom.nix  idea-eap.nix  intellij-idea.nix  (+3 more)
(+162 files in other folders)
