[package]
name = "???"
version = "0.1.0"
description = "???"
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/???"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]
